mobile style fixes auto overflow for user list && messagesContainer && border for userList

--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,13 @@ body {
 }
 
 .user-list {
+    margin-top: 10%;
     width: 300px;
-    margin-right: 2rem;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: #f8f8f8;
 }
 
 .chat {
@@ -51,6 +56,7 @@ body {
     background-color: #f8f8f8;
     overflow-y: auto;
     width: 40%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -103,6 +109,7 @@ span svg {
     gap: 1rem;
     width: 100%;
 }
+
 
 .github-button {
     background-color: #fff;
@@ -158,7 +165,7 @@ div:nth-child(4) > div > div > div > div > button {
     margin: 0 auto;
 }
 
-#root > div > div.chat > form > div > aside > div.Flex.epr-preview.FlexRow {
+aside > div.Flex.epr-preview.FlexRow {
     display: none;
 }
 
@@ -169,8 +176,7 @@ div:nth-child(4) > div > div > div > div > button {
 
 @media (max-width: 1024px) {
     .container {
-        flex-direction: column;
-        padding: 40px;
+        padding: 10px;
     }
 
     .chat {
@@ -178,12 +184,21 @@ div:nth-child(4) > div > div > div > div > button {
     }
 
     .user-list {
-        margin: auto;
-        width: auto;
+      height: 50%;
+        overflow-y: auto;
     }
 }
 
 @media (max-width: 600px) {
+    .container {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .user-list {
+        width: auto;
+    }
+
     .input-form {
         flex-direction: column;
         align-items: center;
